[package]
name = "final_project"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = "4.5.39"
colored = "3.0.0"
crossterm = "0.28"
env_logger = "0.11.8"
log = "0.4.27"
noise = "0.9.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
ratatui = "0.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }